--- a/TQT(The question I asked the teacher today.)/index.html
+++ b/TQT(The question I asked the teacher today.)/index.html
@@ -586,7 +586,7 @@
 <ul>
 <li>네트워크 및 model build까지 완성해서 실행되어 역전파 되었을 때 형성된다.</li>
 <li><code class="language-text">compile에서 w</code>: 네트워크 만들고 난 후 model build하는 과정. optimizer &#x26; loss 값을 정의해주는 부분임. w는 만들어져있지 않다.</li>
-<li><code class="language-text">fit에서 w</code>: fit은 train data 사용. A 다음 B가 <strong>나온다고 저장</strong> </li>
+<li><code class="language-text">fit에서 w</code>: fit은 train data 사용. A 다음 B가 <strong>나온다고 저장함</strong></li>
 <li><code class="language-text">predict에서 w</code>: predict(예측)는 test data 사용. 예측 모델 기준으로 A를 넣으면 B가 <strong>나오게 하는</strong> 어떤 것(Thing)</li>
 </ul>
 <br>
